--- a/style.css
+++ b/style.css
@@ -3,6 +3,20 @@
     padding: 0;
     margin: 0;
 }
+/* scrollable with js */
+.active_nav{
+    background-color: #6e57e0;
+    transition: 200ms ease-in-out background-color;
+}
+.active_nav .navbar-brand, .active_nav .nav-link{
+color: white;
+}
+
+
+header{
+    position: fixed;
+    width: 100%;
+}
 .navbar-brand{
     font-weight: 600;
     font-size: 28px;
@@ -16,27 +30,157 @@ header{
 .nav-link{
     letter-spacing: 2px;
     color: black;
+    padding: 10px 20px;
+    
 }
+
+
+
+/* banner  */
+.banner{
+    padding-top: 100px;
+    padding-left: 300px;
+    padding-right: 300px;
+}
+.banner h1{
+    font-size: 3rem;
+    font-weight: bold;
+}
+.banner h4{
+    font-size: 1.5rem;
+    color: #99989d;
+    text-align: left;
+    margin-top: 1.8rem;
+}
+.banner p{
+    font-size: 1rem;
+    color: #99989d;
+    margin-top: 1.8rem;
+}
+.banner-btn{
+    background-color: #6e57e0;
+    outline: none;
+    border: none;
+    border-radius: 1rem;
+    color: #fff;
+    font-weight: bold;
+    margin-top: 1.8rem;
+    font-size: 1.4rem;
+    padding: 1rem 1.5rem;
+}
+.banner img{
+    width: 400px;
+    height: 500px;
+}
+.icon{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: center;
+    font-size: 1.8rem;
+    color: #6e57e0;
+    font-weight: 400;
+}
+
+/* banner button */
+.mouse-btn {
+    margin: 10px auto;
+    width: 40px;
+    height: 80px;
+    border: 3px solid rgb(110, 87, 224);
+    border-radius: 20px;
+    display: flex;
+  }
+  
+  .mouse-scroll {
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: linear-gradient(170deg, rgba(110, 87, 224, 0.918), rgb(123, 124, 124));
+    border-radius: 50%;
+    margin: auto;
+    animation: scrolling13 1s linear infinite;
+  }
+  
+  @keyframes scrolling13 {
+    0% {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+  
+    100% {
+      opacity: 1;
+      transform: translateY(20px);
+    }
+  }
+  .container_mouse h6{
+    text-align: center;
+    color: #99989d;
+
+  }
+/* banner  buuton end */
+
+
+
+
+
+
+
+
+
 
 @media only screen and (max-width: 600px) {
     /* header */
     header{
         padding-left: 0px;
         padding-right: 0px;
+        position: static;
+        margin-bottom: 30px;
     }
     .nav-link{
         text-align: center;
         
     }
+    /* banner */
+    .banner{
+        padding-top: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .banner h1{
+        font-size: 1.5rem;
+    }
+    .social-links{
+        display: none;
+    }
+    .banner-btn{
+        font-size: 0.8rem;
+    padding: 0.5rem 1rem;
+    }
+    .osama-img{
+        display: none;
+    }
+    .container_mouse{
+        display: none;
+    }
 }
+
+
 @media only screen and (max-width: 900px) {
     /* header */
     header{
         padding-left: 0px;
         padding-right: 0px;
+        position: static;
     }
     .nav-link{
         text-align: center;
         
+    }
+    /* banner */
+    .banner{
+        padding-top: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 }
